<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/drawer_workouts"
            android:title="@string/menu_workouts" />
        <item
            android:id="@+id/drawer_exercises"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/drawer_tracking"
            android:title="@string/menu_tracking" />
        <item
            android:id="@+id/drawer_history"
            android:title="@string/menu_history" />
    </group>
</menu>