<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/drawer_home">

    <fragment
        android:id="@+id/drawer_home"
        android:name="com.example.musclenerds.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/drawer_tracking"
        android:name="com.example.musclenerds.WorkoutTracking"
        android:label="@string/menu_tracking"
        tools:layout="@layout/activity_workout_tracking" />

    <fragment
        android:id="@+id/drawer_workouts"
        android:name="com.example.musclenerds.ui.gallery.GalleryFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/drawer_exercises"
        android:name="com.example.musclenerds.ui.exerciseview.ExerciseViewFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/exercise_view_fragment" >

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/IndividualExercise" />

    </fragment>

    <fragment
        android:id="@+id/IndividualExercise"
        android:name="com.example.musclenerds.ui.exerciseview.IndividualExerciseFragment"
        android:label="Exercises"
        tools:layout="@layout/exercise_fragment"/>

    <fragment
        android:id="@+id/drawer_history"
        android:name="com.example.musclenerds.WorkoutHistory"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_workout_history" />
</navigation>